# libdane

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  compile_flags.txt  libd_testing.h  libd_types.h  meson.build  meson_options.txt
errors/: meson.build
errors/include/libdane/: errors.h
errors/src/: errors.c
errors/src/internal/: internal.h  platform_wrap.c
filesystem/include/libdane/: filesystem.h
filesystem/src/: paths.c
include/: meson.build  types.h
include/libd/: common.h  errors.h  filesystem.h  memory.h  platform.h  testing.h
include/libd/platform/: filesystem.h  threads.h
include/libd/utils/: darray.h  encodings.h
memory/: meson.build
memory/include/libdane/: memory.h
memory/include/libdane/internal/: align_compat.h
memory/src/: bump_arena.c  linear_allocator.c  monotyped_arena.c  pool_allocator.c  pool_arena.c  slab_allocator.c  slub_allocator.c  stack_arena.c
memory/src/internal/: containers.h  ring_buffer.c
memory/tests/: bump_arena_test.c  linear_allocator_test.c  pool_allocator_test.c  stack_arena_test.c  test_main.c
platform/: meson.build
platform/include/libdane/: platform.h
platform/include/libdane/platform/: filesystem.h  thread.h
platform/src/internal/: allocator_wrap.c  internal.h
platform/src/posix/: parsing.h  path.c  path_parsing.c  thread_local_storage.c
platform/src/posix/filesystem/: parsing.h  path.c  path_parse.c  path_parsing.c
platform/src/posix/thread/: thread.c  thread_local_storage.c
platform/tests/: path_test.c  thread_local_storage_test.c  thread_test.c
platform/tests/unit/: parsing_test.c
src/: meson.build
src/errors/: errors.c  meson.build
src/filesystem/: filepath.c  filepath.h  filepath_allocator.c  filepath_resolver.c  meson.build
src/filesystem/internal/: allocator_wrap.c  allocator_wrap.h  platform_wrap.c  platform_wrap.h
src/memory/: linear_allocator.c  meson.build  pool_allocator.c
src/memory/internal/: helpers.c  helpers.h
src/platform/: meson.build
src/platform/posix/: env_var.c  path.c  paths.c  thread_local_storage.c
testing/include/libdane/: testing.h
tests/: meson.build
tests/filesystem/: filepath_resolver.c  filesystem.c  meson.build  test_filepath.c  test_filepath_resolver.c  test_filesystem.c  test_main.c
tests/memory/: linear_allocator_test.c  meson.build  pool_allocator_test.c  test_main.c
tests/platform/: meson.build  path_test.c  test_main.c  thread_local_storage_test.c
tests/platform/unit/: parsing_test.c
types/inlude/libdane/: types.h
